tests/ui/issues/issue-36299.stderr
error[E0392]: lifetime parameter `'a` is never used
  --> $DIR/issue-36299.rs:1:12
   |
LL | struct Foo<'a, A> {}
   |            ^^ unused lifetime parameter
   |
   = help: consider removing `'a`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: type parameter `A` is never used
  --> $DIR/issue-36299.rs:1:16
   |
LL | struct Foo<'a, A> {}
   |                ^ unused type parameter
   |
   = help: consider removing `A`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `A` to be a const parameter, use `const A: /* Type */` instead

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
